# argparse-ps1

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  dev-tools.ps1  pyproject.toml
.github/: PUBLISHING.md  copilot-instructions.md
.github/workflows/: ci.yml
examples/: Basic-Example.ps1  README.md  __init__.py  advanced_example.py  basic_example.py  example.py  example_python.py  example_uv_project.py
src/argparse_ps1/: __init__.py  argparse_ps1.py
src/argparse_ps1_wrapper/: __init__.py  argparse_ps1_wrapper.py
src/uv_ps1_wrapper/: __init__.py  uv_ps1_wrapper.py
tests/: __init__.py  test_argparse_ps1_wrapper.py  test_uv_ps1_wrapper.py
