[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uv-ps1-wrapper"
version = "0.1.0"
description = "Generate PowerShell wrapper scripts for Python scripts executed with uv"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shimarch"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Shells",
    "Operating System :: OS Independent",
]
keywords = ["powershell", "wrapper", "uv", "code-generation", "cli"]
dependencies = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/shimarch/uv-ps1-wrapper"
Repository = "https://github.com/shimarch/uv-ps1-wrapper"
Issues = "https://github.com/shimarch/uv-ps1-wrapper/issues"
Documentation = "https://github.com/shimarch/uv-ps1-wrapper#readme"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501"]

[tool.ruff.isort]
known-first-party = ["uv_ps1_wrapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
