[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[project]
name = "argparse-ps1"
version = "0.1.7"
description = "Generate PowerShell wrapper scripts for Python scripts executed with uv"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shimarch" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Shells",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["powershell", "wrapper", "uv", "code-generation", "cli"]
dependencies = []

[project.urls]
Homepage = "https://github.com/shimarch/argparse-ps1"
Repository = "https://github.com/shimarch/argparse-ps1"
Issues = "https://github.com/shimarch/argparse-ps1/issues"
Documentation = "https://github.com/shimarch/argparse-ps1#readme"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PL",  # pylint
]
ignore = [
    "E501",    # line too long, handled by black
    "PLE1205", # Too many arguments for logging format string
    "PLR0911", # Too many return statements
    "PLR0912", # flake8-parameters (関数の引数に関するルール)
    "PLR0913", # Too many arguments (5 > 4)
    "PLR0915", # Too many statements (61 > 50)
    "PLR2004", # Magic value used in comparison
    "PLW0603", # Using the global statement
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["E501", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["argparse_ps1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "dist", "build"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
